# roo-conport-modes-v2

./: .gitignore  projectBrief.md
context_portal/: context.db
context_portal/conport_vector_data/: chroma.sqlite3
scripts/: README.md  fix_global_config.py  order.yaml  run_sync.py
scripts/roo_modes_sync/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  fix_global_config.py  mcp.py  pyproject.toml  run_tests.py
scripts/roo_modes_sync/core/: __init__.py  backup.py  discovery.py  global_config_fixer.py  ordering.py  sync.py  validation.py
scripts/roo_modes_sync/tests/: __init__.py  test_backup_integration.py  test_backup_integration_with_sync.py  test_backup_system.py  test_cli.py  test_cli_integration.py  test_cli_strategy_parsing.py  test_cli_tdd_enhancements.py  test_discovery.py  test_dynamic_username_paths.py  test_global_config_group_fixes.py  test_mcp_backup_integration.py  test_mcp_end_to_end.py  test_mode_groupings.py  test_ordering.py  test_output_format.py  test_path_resolution.py  test_sync.py  test_sync_complex_group_warnings.py  test_sync_integration.py  test_sync_tdd_comprehensive.py  test_validation.py  test_yaml_structure_validation.py
scripts/roo_modes_sync/utils/: __init__.py  dynamic_paths.py
